--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.ajosavings</groupId>
-    <artifactId>AjoSavigs</artifactId>
+    <artifactId>AjoSavings</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>AjoSavigs</name>
     <description>AjoSavigs</description>
