--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8086
+server.port=8087
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=Gabson12@
 spring.datasource.username=postgres
@@ -11,6 +11,9 @@ application.version=v1
 
 logging.level.com.ajo.savings=DEBUG
 logging.file.console=System.out
+
+#logging.level.org.springframework.security=DEBUG
+
 
 
 #Email Config
