--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8087
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=123456789
+spring.datasource.password=
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5433/ajoDb
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
