endpoint for google signup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8087
+server.port=8086
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=Gabson12@
+spring.datasource.password=1234
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/AjoSavings3
+spring.datasource.url=jdbc:postgresql://localhost:5436/AjoSavings
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
@@ -25,3 +25,12 @@ spring.mail.password=valozledshabxusi
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#google signup
+spring.security.oauth2.client.registration.google.client-id=312484357227-o2rs6msoa63lvisuo7gq4dgffqoajqit.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8086/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
+
