--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8087
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=Gabson12@
+spring.datasource.password=password
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/AjoSavings3
+spring.datasource.url=jdbc:postgresql://localhost:5432/Ajo
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
@@ -15,6 +15,12 @@ logging.file.console=System.out
 
 #logging.level.org.springframework.security=DEBUG
 
+# ===========================================================
+# - CLOUDINARY
+# ===========================================================
+cloudinary.email=${CLOUD_NAME}
+cloudinary.api.key=${API_KEY}
+cloudinary.api.secret=${API_SECRET}
 
 
 #Email Config
