--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8087
+server.port=8089
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=Gabson12@
+spring.datasource.password=123456789
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/AjoSavings3
+spring.datasource.url=jdbc:postgresql://localhost:5433/ajoDb
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
