--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8087
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.password=password
+spring.datasource.password=Gabson12@
 spring.datasource.username=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/Ajo
+spring.datasource.url=jdbc:postgresql://localhost:5432/AjoSavings3
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
